功能优化
